elyes-test/invador-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invador-pod
  namespace: default
  labels:
    access: allowed
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
